--- a/html/css/style.css
+++ b/html/css/style.css
@@ -34,3 +34,9 @@
         margin-bottom: 15px;
         padding: 7px 9px;
       }
+	  }
+	  
+	  .overview_status{
+		  min-height:200px;
+		  background-color:#F00;  
+	  }
